crates/apex-parser/tests/snapshots/golden__malformed@02_missing_close_paren.cls.snap
---
source: crates/apex-parser/tests/golden.rs
expression: "snapshot_text(&src, &parse)"
input_file: tests/golden/malformed/02_missing_close_paren.cls
---
# source
if (a { b(); }

# tree
StmtRoot@0..14
  IfStmt@0..14
    If@0..2 "if"
    Whitespace@2..3 " "
    LParen@3..4 "("
    NameExpr@4..6
      Identifier@4..5 "a"
      Whitespace@5..6 " "
    Block@6..14
      LBrace@6..7 "{"
      Whitespace@7..8 " "
      ExprStmt@8..13
        CallExpr@8..11
          Identifier@8..9 "b"
          ArgList@9..11
            LParen@9..10 "("
            RParen@10..11 ")"
        Semi@11..12 ";"
        Whitespace@12..13 " "
      RBrace@13..14 "}"

# errors
ParseError { message: "expected RParen, found LBrace", offset: 5 }
