crates/apex-parser/tests/snapshots/golden__statements@01_if_else.cls.snap
---
source: crates/apex-parser/tests/golden.rs
expression: "snapshot_text(&src, &parse)"
input_file: tests/golden/statements/01_if_else.cls
---
# source
if (a) { b(); } else { c(); }

# tree
StmtRoot@0..29
  IfStmt@0..29
    If@0..2 "if"
    Whitespace@2..3 " "
    LParen@3..4 "("
    NameExpr@4..5
      Identifier@4..5 "a"
    RParen@5..6 ")"
    Whitespace@6..7 " "
    Block@7..16
      LBrace@7..8 "{"
      Whitespace@8..9 " "
      ExprStmt@9..14
        CallExpr@9..12
          Identifier@9..10 "b"
          ArgList@10..12
            LParen@10..11 "("
            RParen@11..12 ")"
        Semi@12..13 ";"
        Whitespace@13..14 " "
      RBrace@14..15 "}"
      Whitespace@15..16 " "
    Else@16..20 "else"
    Whitespace@20..21 " "
    Block@21..29
      LBrace@21..22 "{"
      Whitespace@22..23 " "
      ExprStmt@23..28
        CallExpr@23..26
          Identifier@23..24 "c"
          ArgList@24..26
            LParen@24..25 "("
            RParen@25..26 ")"
        Semi@26..27 ";"
        Whitespace@27..28 " "
      RBrace@28..29 "}"
